--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,5 @@
 
 /* 
-
     You can write your own styles here...
     
     
@@ -8,5 +7,22 @@
     other sylesheets into your bunde as well, e.j:
     
     import 'relative/path/to/stylesheet.scss';
-
 */
+.traffic-light{
+    background: black;
+    padding: 10px;
+    display: inline-block;
+    margin: auto;
+}
+.light{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: yellow;
+}
+.red{background: red;}
+.yellow{background: yellow;}
+.green{background: green;}
+.glow{
+    box-shadow: 0px 0px 9px 4px #747DE8;
+}
